# Studbaza

PP/: lista1.ml  lista1a.ml  lista1a.scala
PP/lista1/: lista1.scala  lista1a.ml  lista1a.scala
PP/lista2/: lista2.cmi  lista2.cmx  lista2.ml  lista2.s  lista2.scala
PP/lista3/: lista3.ml  lista3.scala
PP/lista4/: lista4.ml  lista4.scala
PP/lista5/: lista5.ml  lista5.scala
PP/lista6/: lista6.scala
PP/lista7/: Queue.cmi  Queue.mli  QueueCyc.cmi  QueueCyc.cmo  QueueCyclic.cmi  QueueCyclic.cmo  QueueCyclic.ml  QueueList.cmi  QueueList.cmo  QueueList.ml  QueueListPair.cmi  QueueListPair.cmo  QueueListPair.ml  QueueMut.cmi  QueueMut.mli
PP_lab/lista1/: lista1.ml  lista1.scala
PP_lab/lista12/: build.sbt
PP_lab/lista2/: lista2.ml  lista2.scala
PP_lab/lista3/: lista3.ml
PP_lab/lista6/: CMakeLists.txt  main.cpp
TEP/: lista1  lista1.cpp
TEP/lista1/: com.sh  com0.sh  constants.h  constants0.h  lista  lista1  lista1.cpp
TEP/lista2/: CMakeLists.txt  com.sh  lista2  (+4 more)
TEP/lista9/: CMakeLists.txt  main.cpp
TEP/lista9/include/: Matrix.h  MscnProblem.h  MscnSolution.h  MscnSolve.h  Random.h  RandomSearch.h  Timer.h  Utils.h  constants.h
TEP/lista9/include/Abstract/: Problem.h  Solution.h  Solve.h
TEP/lista9/include/Mscn/: MscnProblem.h  MscnRandomProblem.h
TEP/lista9/include/Solvers/: DEvolution.h  RandomSearch.h
TEP/lista9/src/: Matrix.cpp  MscnProblem.cpp  MscnSolution.cpp  Random.cpp  RandomSearch.cpp  Timer.cpp  Utils.cpp
TEP/lista9/src/Mscn/: MscnProblem.cpp  MscnRandomProblem.cpp
TEP/lista9/src/Solvers/: DEvolution.cpp  RandomSearch.cpp
(+70 files in other folders)
